# LCG

./: .gitignore  README.md  pyproject.toml
lcg/: __init__.py  define_lcg.py  gba.py  gc.py
tests/: test_lcg.py
